# caml

./: AGENTS.md  Cargo.toml  README.md  split.py  split_ffmpeg.py
.github/workflows/: ci.yml
benches/: buffer_pool.rs  mock_passthrough.rs
crates/caml-core/: Cargo.toml
crates/caml-core/src/: compiler.rs  error.rs  frontend.rs  lib.rs  metrics.rs  runtime.rs  units.rs
crates/caml-ffmpeg/: Cargo.toml
crates/caml-ffmpeg/src/: capabilities.rs  device.rs  error.rs  h264.rs  hwaccel.rs  lib.rs  rtsp.rs  source.rs  transcode.rs  worker.rs
crates/caml-linux-media/: Cargo.toml
crates/caml-linux-media/src/: camera.rs  lib.rs
crates/caml-linux-media/src/camera/: config.rs  error.rs  frame.rs  mod.rs  native.rs
crates/caml-webrtc/: Cargo.toml
crates/caml-webrtc/src/: lib.rs
docs/: claims.md  pi-testing.md  roadmap.md  webrtc.md
docs/benchmarks/: README.md
examples/: feature_webrtc.rs  full_runtime.rs  load_manifest.rs  manifest_compile.rs  mock_runtime.rs  webrtc_peer_connection.rs
src/: adapters.rs  builder.rs  compiler.rs  error.rs  frontend.rs  lib.rs  runtime.rs
tests/: buffer_pool_limit.rs  builder_feature_adapters.rs  compiler.rs  fanout_router.rs  hot_path_alloc.rs  libcamera_host.rs  manifest.rs  memory_model.rs  no_subprocess.rs  pi4_hardware_encode_flow.rs  pi5_stateless_decode_flow.rs  pi_host.rs  pipeline_builder.rs  readme_claims_test.rs  readme_manifest.rs  recovery_chaos.rs  recovery_policy.rs  resource_plan.rs  rtsp_to_webrtc_mock.rs  runtime.rs  soak_tests.rs
