[workspace]
members = [
    ".",
    "crates/caml-core",
    "crates/caml-ffmpeg",
    "crates/caml-webrtc",
    "crates/caml-linux-media",
]
default-members = ["."]
resolver = "2"

[package]
name = "caml"
version = "1.0.0"
edition = "2021"

[features]
default = []
ffmpeg = ["dep:caml-ffmpeg"]
webrtc = ["dep:caml-webrtc"]
pi = ["dep:caml-linux-media"]
full = ["ffmpeg", "webrtc", "pi"]

[dependencies]
caml-core = { path = "crates/caml-core", version = "1.0.0" }
caml-ffmpeg = { path = "crates/caml-ffmpeg", version = "1.0.0", optional = true }
caml-webrtc = { path = "crates/caml-webrtc", version = "1.0.0", optional = true }
caml-linux-media = { path = "crates/caml-linux-media", version = "1.0.0", optional = true }
thiserror = "2.0"
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"

[dev-dependencies]
async-trait = "0.1"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
webrtc = "0.17"
rtp = "0.17"
tempfile = "3"

[[bench]]
name = "buffer_pool"
harness = false

[[bench]]
name = "mock_passthrough"
harness = false

