[package]
name = "caml-core"
version = "1.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2.0"
tokio = { version = "1.38", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
url = "2.5"
